# tudo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.specify/memory/: constitution.md
specs/001-kanban-tui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-kanban-tui/checklists/: requirements.md
specs/001-kanban-tui/contracts/: file-formats.md  keyboard.md
specs/002-xdg-log-dirs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-xdg-log-dirs/checklists/: requirements.md
specs/003-keep-task-focus/: plan.md  research.md  spec.md  tasks.md
specs/003-keep-task-focus/checklists/: requirements.md
specs/004-url-click-open/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-url-click-open/checklists/: requirements.md
specs/006-task-reorder/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-memo-panel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-click-item-focus/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-detail-cursor-wrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-status-ordered-tasks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-panel-focus-keys/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: app.rs  input.rs  lib.rs  main.rs  model.rs  storage.rs  ui.rs  url.rs
tests/: model_tests.rs  storage_tests.rs  url_tests.rs
(+8 files in other folders)
