[package]
name    = "tudo"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui      = { version = "0.29", features = ["crossterm"] }
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
chrono       = { version = "0.4", features = ["serde"] }
directories  = "5"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
